Bugfix: Logo alignment on chrome

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -10,7 +10,6 @@ header, .header {
     &__logo {
         height: 3rem;
         z-index: 5;
-        width: 100%;
         min-width: 6rem;
 
         &--container, &--responsive {
